--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
         <p>
             Want to download any version of Riley's Dungeons and Dragons NPC generator?
             <br>
-            Want version 1.0.1 instead of the latest version, for some reason?
+            Want version 1.0 instead of the latest version, for some reason?
             <br>
             Download any version and changelog here. You can also view and download a full changelog.
         </p>
+        <div class = "ButtonLayout">
+            <button class = "DownloadButton">Testing 1</button>
+            <button class = "DownloadButton">Testing 2</button>
+            <button class = "DownloadButton">Testing 3</button>
+            <button class = "DownloadButton">Testing 4</button>   
+        </div>
     </body>
 </html>
