more attempts at flexbox

--- a/index.html
+++ b/index.html
@@ -15,11 +15,19 @@
             <br>
             Download any version and changelog here. You can also view and download a full changelog.
         </p>
-        <div class = "ButtonLayout">
-            <button class = "DownloadButton">Testing 1</button>
-            <button class = "DownloadButton">Testing 2</button>
-            <button class = "DownloadButton">Testing 3</button>
-            <button class = "DownloadButton">Testing 4</button>   
-        </div>
+        
+        <button class = "DownloadButton">
+            <span>Testing 1</span>
+        </button>
+        <button class = "DownloadButton">
+            <span>Testing 2</span>
+        </button>
+        <button class = "DownloadButton">
+            <span>Testing 3</span>
+        </button>
+        <button class = "DownloadButton">
+            <span>Testing 4</span>
+        </button>   
+
     </body>
 </html>
