--- a/index.html
+++ b/index.html
@@ -15,19 +15,12 @@
             <br>
             Download any version and changelog here. You can also view and download a full changelog.
         </p>
-        
-        <button class = "DownloadButton">
-            <span>Testing 1</span>
-        </button>
-        <button class = "DownloadButton">
-            <span>Testing 2</span>
-        </button>
-        <button class = "DownloadButton">
-            <span>Testing 3</span>
-        </button>
-        <button class = "DownloadButton">
-            <span>Testing 4</span>
-        </button>   
+        <div class = "ButtonLayout">
+            <a href = "Versions/Release 1.0/dist/NPCGen1-0.exe" class = "DownloadButton"><h3>Download 1.0 (Windows)</h3></a>
+            <a class = "DownloadButton"><h3>Download 1.0 (Mac, incomplete)</h3></a>
+            <a href = "Versions/Release 1.0 Source.zip" class = "DownloadButton"><h3>1.0 Source Code</h3></a>
+            <a href = "changelogs.html" class = "DownloadButton"><h3>View Digital Changelogs (No Download)</h3></a>
+        </div> 
 
     </body>
 </html>
