Fixed home button on changelogs.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Dungeons and Dragons NPC generator downloads</title>
-        <link rel="stylesheet", href="style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div id="title">
@@ -19,7 +19,7 @@
             <a href = "Versions/Release 1.0/dist/NPCGen1-0.exe" class = "DownloadButton"><h3>Download 1.0 (Windows)</h3></a>
             <a class = "DownloadButton"><h3>Download 1.0 (Mac, incomplete)</h3></a>
             <a href = "Versions/Release 1.0 Source.zip" class = "DownloadButton"><h3>1.0 Source Code</h3></a>
-            <a href = "changelogs.html" class = "DownloadButton"><h3>View Digital Changelogs (No Download)</h3></a>
+            <a href = "changelogs.html" class = "DownloadButton"><h3>View Online Changelogs and Credits (No Download)</h3></a>
         </div> 
 
     </body>
