--- a/changelogs.html
+++ b/changelogs.html
@@ -6,7 +6,14 @@
     </head>
     <body>
         <h1>Testing</h1>
-        <a href = "index.html"><h3 class = "DownloadButton" style = "width: 75px;">Home</h3></a>
+        <a href = "index.html" style = "text-decoration: none;"><h3 class = "NonFlexButtons" style = "width: 60px; font-size:24px;">Home</h3></a>
+
+        <h2>Credits</h2>
+        <p>
+            Hi! This project was started by me, Riley, but I didn't finish this alone. 
+            The good folks on the Game Changers League discord server helped immensely with pronouns (How did I forget It/Its?). 
+            Additionally, this will eventually be ported to MacOS by @UmuraleFireSeer, so thanks for that!
+        </p>
 
         <h2>Version 1.0.1</h2>
         <p>
