--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
             Download any version and changelog here. You can also view and download a full changelog.
         </p>
         <div class = "ButtonLayout">
-            <a href = "Versions/Release 1.0/dist/NPCGen1-0.exe" class = "DownloadButton"><h3>Download 1.0 (Windows)</h3></a>
-            <a class = "DownloadButton"><h3>Download 1.0 (Mac, incomplete)</h3></a>
-            <a href = "Versions/Release 1.0 Source.zip" class = "DownloadButton"><h3>1.0 Source Code</h3></a>
-            <a href = "changelogs.html" class = "DownloadButton"><h3>View Online Changelogs and Credits (No Download)</h3></a>
+            <a href = "Versions/Release 1.0/dist/NPCGen1-0.exe" class = "DownloadButton" style = "width:250px;"><h3 class = "DownloadText">Download 1.0 (Windows)</h3></a>
+            <a href = "Versions/Release 1.0 Source.zip" class = "DownloadButton"><h3 class = "DownloadText">1.0 Source Code</h3></a>
+            <a href = "changelogs.html" class = "DownloadButton"><h3 class = "DownloadText">View Online Changelogs and Credits (No Download)</h3></a>
         </div> 
 
     </body>
