--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
         </p>
         <div class = "ButtonLayout">
             <a href = "Versions/Release 1.0/dist/NPCGen1-0.exe" class = "DownloadButton" style = "width:250px;"><h3 class = "DownloadText">Download 1.0 (Windows)</h3></a>
-            <a href = "Versions/Release 1.0 Source.zip" class = "DownloadButton"><h3 class = "DownloadText">1.0 Source Code</h3></a>
+            <a href = "Versions/Release 1.0 Source.zip" class = "DownloadButton"><h3 class = "DownloadText">Download 1.0 Source Code</h3></a>
             <a href = "changelogs.html" class = "DownloadButton"><h3 class = "DownloadText">View Online Changelogs and Credits (No Download)</h3></a>
-        </div> 
-
+            
+            <a href = "Versions/Release 1.0.1/dist/main.exe" class = "DownloadButton" style = "width:250px;"><h3 class = "DownloadText">Download 1.0.1 (Windows)</h3></a>
+            <a href = "Versions/Release 1.0.1 Source.zip" class = "DownloadButton"><h3 class = "DownloadText">Download 1.0.1 Source Code (Includes changelog)</h3></a>
+            <a href = "changelogs.html" class = "DownloadButton"><h3 class = "DownloadText">Download 1.0.1 changelog</h3></a>
+        </div>
     </body>
 </html>
