Fixed 1.0.1 Changelog button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             
             <a href = "Versions/Release 1.0.1/dist/main.exe" class = "DownloadButton" style = "width:250px;"><h3 class = "DownloadText">Download 1.0.1 (Windows)</h3></a>
             <a href = "Versions/Release 1.0.1 Source.zip" class = "DownloadButton"><h3 class = "DownloadText">Download 1.0.1 Source Code (Includes changelog)</h3></a>
-            <a href = "changelogs.html" class = "DownloadButton"><h3 class = "DownloadText">Download 1.0.1 changelog</h3></a>
+            <a href = "Versions/Release 1.0.1/Changelog.txt" class = "DownloadButton"><h3 class = "DownloadText">Download 1.0.1 changelog</h3></a>
         </div>
     </body>
 </html>
