--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <br>
             Download any version and changelog here. You can also view and download a full changelog.
         </p>
+        <br>
+        <a href = "FAQ.html" style = "text-decoration: none;"><h3 class = "NonFlexButtons" style = "width: 60px; font-size: 18px;">FAQs</h3></a>
         <div class = "ButtonLayout">
             <a href = "Versions/Release 1.0/dist/NPCGen1-0.exe" class = "DownloadButton" style = "width:250px;"><h3 class = "DownloadText">Download 1.0 (Windows)</h3></a>
             <a href = "Versions/Release 1.0 Source.zip" class = "DownloadButton"><h3 class = "DownloadText">Download 1.0 Full Build</h3></a>
