Added 1.1 and 1.0.2 changelog

--- a/changelogs.html
+++ b/changelogs.html
@@ -34,5 +34,62 @@
             - Fixed a bug that allowed the same npc to be kept multiple times
         </p>
 
+        <h2>Version 1.0.2</h2>
+        <p>
+            - Added an effect to boring, which changes the name from "Name" to "Name the boring"
+            <br>
+            - Added the "lastName" field to npcClass, which is printed when calling npcClass as a string
+            <br>
+            - Added " the Boring" to last name instead of first name
+            <br>
+            - Added a button which opens a window shows credits
+            <br>
+            - Replaced He/Him (Cis) and He/Him (Trans) with He/Him
+            <br>
+            - Replaced She/Her (Cis) and She/Her (Trans) with She/Her
+            <br>
+            - Added more clear separators between classes and species
+            <br>
+            - Added the multi feature, multi class, and multi species features
+            <br>
+            - Increased the size of viewNPC field from 500x100 to 500x150
+            <br>
+            - Changed features Strong, Lithe, Hearty, Logical, Wary and Charming to do 6d6, drop the 2 lowest, and reroll 1's
+            <br>
+            - Changed features Weak, Clumsy, Fragile, Illogical, Rash, and Humorless to do 4d6, drop the 2 lowest. 
+            <br>
+            - Made viewNPC and NPCList text elements to wrap on words
+            <br>
+            - Changed "Speak in third person" to "Speaks in third person"
+        </p>
+
+        <h2>Version 1.1</h2>
+        <p>
+            - Added more first names 
+            <br>
+            - Added more surnames
+            <br>
+            - Changed the textures of the buttons
+            <br>
+            - Fixed an error which allowed you to add "None" to your saved NPCs
+            <br>
+            - Made clicking on viewField when it contains text remove all text
+            <br>
+            - Added button images when not being pressed and being pressed
+            <br>
+            - Added a background image
+            <br>
+            - Fixed the credits window
+            <br>
+            - Changed UI to use the Canvas System
+            <br>
+            - Made buttons move by (2, 2) then (-2, -2) when clicked
+            <br>
+            - Added a header
+            <br>
+            - Added a logo, so nobody can steal the app
+            <br>
+            - Made all images use getLocalFile.resource_path() to avoid crashing
+        </p>
     </body>
 </html>
