--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
             <a href = "Versions/Release 1.0.2/1 File/DDNPCGen 1-0-2.exe" class = "DownloadButton" style="width: 250px;"><h3 class = "DownloadText">Download 1.0.2 (Windows)</h3></a>
             <a href = "Versions/Release 1.0.2/1.0.2 Source Code.zip" class = "DownloadButton"><h3 class = "DownloadText">Download 1.0.2 Source Code (Includes Changelog)</h3></a>
             <a href = "Versions/Release 1.0.2/Changelog.txt" class = "DownloadButton"><h3 class = "DownloadText">Download 1.0.2 Changelog</h3></a>
+
+            <a href = "Versions/Release 1.1/NPCGenerator.exe" class = "DownloadButton" style = "width: 250px;"><h3 class = "DownloadText">Download 1.1 (Windows)</h3></a>
+            <a href = "Versions/Release 1.1/Source Code.zip" class = "DownloadButton"><h3 class = "DownloadText">Download 1.1 Source Code</h3></a>
+            <a href = "Versions/Release 1.1/Changelog.txt" class = "DownloadButton"><h3 class = "DownloadText">Download 1.1 Changelog </h3></a>
         </div>
     </body>
 </html>
